[tool.poetry]
name = "website-cheker"
version = "0.1.0"
description = "website availability checker"
authors = ["Jayakar Katika"]

[tool.poetry.dependencies]
python = "^3.7"
faust = "^1.9"
dynaconf = "^2.0"
lz4 = "^2.1"
pytz = "^2019.3"
httpx = "^0.16.1"
ipython = "^7.18.1"
aiopg = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
asynctest = "^0.13"
pytest-asyncio = "^0.10"
aresponses = "^1.1"

[build-system]
requires = ["poetry==1.1.3"]
build-backend = "poetry.masonry.api"
