[tool.poetry]
name = "website-cheker"
version = "0.1.0"
description = "website availability checker"
authors = ["Jayakar Katika"]

[tool.poetry.dependencies]
python = "^3.7"
faust = "^1.9"
dynaconf = {extras = ["yaml"], version = "^3.1.2"}
lz4 = "^3.1"
pytz = "^2020.1"
httpx = "^0.16.1"
aiopg = "^1.0.0"
pytest-httpx = "^0.10.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
pytest = "^6.0"
pytest-httpx = "^0.10.0"
asynctest = "^0.13"
pytest-asyncio = "^0.14"

[build-system]
requires = ["poetry==1.1.3"]
build-backend = "poetry.masonry.api"
